--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "start": "supervisor -e 'js|html|css' ./bin/www"
   },
   "dependencies": {
     "art-template": "^3.0.2-rc2",
