--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "start": "supervisor -e 'js|html|css' ./bin/www"
+    "stop": "supervisor -e 'js|html|css' ./bin/www"
   },
   "dependencies": {
     "art-template": "^3.0.2-rc2",
