--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
     "requirejs": "~2.1.14",
     "jquery": "~1.11.1",
     "underscore": "~1.6.0",
-    "bootstrap": "~3.2.0"
+    "bootstrap": "~3.2.0",
+    "blueimp-md5": "~1.1.0"
   }
 }
