--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "debug": "~0.7.4",
     "ejs": "~0.8.5",
     "express": "~4.2.0",
+    "express-session": "^1.9.2",
     "morgan": "~1.0.0",
     "mysql": "^2.5.0",
     "static-favicon": "~1.0.0"
